fix: change & to &amp;

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CV#2. HTML, CSS & Git Basics</title>
+    <title>CV#2. HTML, CSS &amp; Git Basics</title>
 </head>
 <body>
 <h1>Here will be CV</h1>
